# gherkin

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MARKDOWN_WITH_GHERKIN.md  Makefile  README.md  default.mk  gherkin-languages.json  gherkin.berp
.devcontainer/: devcontainer.json
.github/: dependabot.yml  renovate.json
c/: CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  VERSION  default.mk  gherkin.berp
cpp/: .berp-entrypoint.sh  .berp-generate-all.sh  .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  deps.txt  dialect.cpp.jq  gherkin-cpp-parser.razor  gherkin-cpp-rule-type.razor  gherkin-cpp-rules.razor  gherkin-cpp.razor  gherkin-dialect.cpp.jq  gherkin-i18n.cpp.jq  project.json  project.yaml
cpp/cmake/: cmade  cmate  cucumber_gherkin-config.cmake.in  dependencies.cpm.cmake
cpp/cmake/toolchains/: ext.cmake
cpp/include/: CMakeLists.txt
cpp/include/dbj/: meta_converter.hpp
cpp/include/gherkin/: app.hpp  ast_builder.hpp  ast_node.hpp  basic_parser.hpp  builder.hpp  cb_types.hpp  container_helpers.hpp  data.hpp  demangle.hpp  dialect.hpp  exceptions.hpp  file.hpp  i18n.hpp  id_generator.hpp  items.hpp  join_utils.hpp  keywords.hpp  line.hpp  location.hpp  log.hpp  messages.hpp  msg_types.hpp  node_item.hpp  parse_error.hpp  parser.hpp  parser_base.hpp  parser_context.hpp  parser_info.hpp  pickle_compiler.hpp  pickle_compiler_context.hpp  regex.hpp  rule_type.hpp  sink.hpp  token.hpp  token_formatter_builder.hpp  token_matcher.hpp  token_scanner.hpp  type_traits.hpp  types.hpp  utils.hpp
cpp/include/gherkin/cucumber/gherkin/: App.hpp  AstBuilder.hpp  AstNode.hpp  CbTypes.hpp  Demangle.hpp  Dialect.hpp  Exceptions.hpp  Items.hpp  JoinUtils.hpp  Keywords.hpp  Line.hpp  Log.hpp  MsgTypes.hpp  ParseError.hpp  Parser.hpp  ParserBase.hpp  ParserContext.hpp  ParserInfo.hpp  PickleCompiler.hpp  PickleCompilerContext.hpp  Regex.hpp  RuleType.hpp  Token.hpp  TokenFormatterBuilder.hpp  TokenMatcher.hpp  TokenScanner.hpp  TypeTraits.hpp  Types.hpp  app.hpp  ast_builder.hpp  ast_node.hpp  builder.hpp  cb_types.hpp  container_helpers.hpp  demangle.hpp  dialect.hpp  exceptions.hpp  file.hpp  id_generator.hpp  items.hpp  (+22 more)
cpp/include/gherkin/pickles/: compiler.hpp
cpp/scripts/: build-ext  build-externals  nddiff.sh
cpp/src/gherkin/: parser.cpp  parser_context.cpp  token.cpp  token_scanner.cpp
cpp/src/lib/gherkin/: CMakeLists.txt  app.cpp  ast_builder.cpp  ast_node.cpp  demangle.cpp  dialect.cpp  exceptions.cpp  i18n.cpp  id_generator.cpp  keywords.cpp  line.cpp  link.json  link.yaml  location.cpp  parse_error.cpp  parser.cpp  parser_base.cpp  parser_context.cpp  pickle_compiler.cpp  pickle_compiler_context.cpp  regex.cpp  rule_type.cpp  token.cpp  token_formatter_builder.cpp  token_matcher.cpp  token_scanner.cpp  utils.cpp
cpp/src/lib/gherkin/cucumber/gherkin/: App.cpp  AstBuilder.cpp  AstNode.cpp  Demangle.cpp  Dialect.cpp  Exceptions.cpp  IdGenerator.cpp  Keywords.cpp  Line.cpp  ParseError.cpp  PickleCompiler.cpp  PickleCompilerContext.cpp  Regex.cpp  RuleType.cpp  Token.cpp  TokenFormatterBuilder.cpp  TokenMatcher.cpp  TokenScanner.cpp  Utils.cpp  app.cpp  ast_builder.cpp  ast_node.cpp  demangle.cpp  dialect.cpp  exceptions.cpp  id_generator.cpp  keywords.cpp  line.cpp  parse_error.cpp  pickle_compiler.cpp  pickle_compiler_context.cpp  regex.cpp  rule_type.cpp  token.cpp  token_formatter_builder.cpp  token_matcher.cpp  token_scanner.cpp  utils.cpp
cpp/src/lib/gherkin/pickles/: compiler.cpp
dart/: .gitignore  .pubignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  analysis_options.yaml  dialects_builtin.g.dart.jq  gherkin-dart.razor  pubspec.yaml
docker-berp/: Dockerfile  README.md
dotnet/: .editorconfig  .gitignore  CONTRIBUTING.md  Directory.Build.props  Gherkin.sln  Makefile  README.md  default.mk  gherkin-csharp.razor
elixir/: .gitignore  Makefile  README.md  default.mk  gherkin-elixir.razor  mix.exs
go/: Makefile  README.md  astbuilder.go  bench_test.go  default.mk  dialect.go  dialects_builtin.go  dialects_builtin.go.jq  example_test.go  gherkin.go  gherkin_test.go  go.mod  go.sum  matcher.go  matcher_test.go  messages.go  messages_test.go  parser.go  parser.go.razor  pickles.go  pickles_test.go
java/: .gitignore  CONTRIBUTING.md  Makefile  checkstyle-suppressions.xml  default.mk  gherkin-java.razor  pom.xml
javascript/: .gitignore  .mocharc.json  Makefile  biome.json  default.mk  gherkin-javascript.razor  package-lock.json  package.json  test-cli.mjs  tsconfig.build-cjs.json  tsconfig.build-esm.json  tsconfig.build.json  tsconfig.esm.json  tsconfig.json
objective-c/: Makefile
perl/: .gitignore  LICENSE.txt  Makefile  README.md  cpanfile  default.mk  dist.ini  gherkin-perl.razor
php/: .gitignore  .php-cs-fixer.php  Makefile  composer.json  (+5 more)
python/: .gitignore  CONTRIBUTING.md  MANIFEST  Makefile  default.mk  gherkin-python.razor  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
python/gherkin/: __main__.py  ast_builder.py  ast_node.py  count_symbols.py  dialect.py  errors.py  gherkin_line.py  inout.py  parser.py  parser_types.py  token.py  token_formatter_builder.py  token_matcher.py  token_matcher_markdown.py  token_scanner.py
python/gherkin/pickles/: compiler.py
python/gherkin/scripts/: generate_tokens.py  gherkin.py
python/gherkin/stream/: gherkin_events.py  id_generator.py  source_events.py
python/scripts/: generate_events.py  generate_tokens.py  gherkin.py
python/src/gherkin/: __init__.py  ast_builder.py  ast_node.py  dialect.py  parser.py  token.py  token_formatter_builder.py  token_matcher_markdown.py  token_scanner.py
python/src/gherkin/pickles/: compiler.py
python/src/gherkin/stream/: gherkin_events.py  source_events.py
python/test/: count_symbols_test.py  gherkin_in_markdown_token_matcher_test.py  gherkin_test.py  source_events_test.py
python/test/pickles_test/: compiler_test.py
python/tests/: source_events_test.py
python/tests/pickles_test/: compiler_test.py
(+686 files in other folders)
