[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[project]
name = "gherkin-official"
version = "33.0.0"
description = "Gherkin parser (official, by Cucumber team)"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Cucumber Ltd and Björn Rasmusson", email = "cukes@googlegroups.com" }
]
dependencies = [
  "typing_extensions>=4",
]
keywords = ["gherkin", "cucumber", "bdd"]
license = "MIT"
license-files = [
  "LICENSE",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/cucumber/gherkin"
Repository = "https://github.com/cucumber/gherkin.git"
Download = "https://pypi.python.org/pypi/gherkin-official"
Issues = "https://github.com/cucumber/gherkin/issues"
Changelog = "https://github.com/cucumber/gherkin/releases"

[dependency-groups]
dev = [
    "pre-commit==4.2.0",
    "pytest>=5.0",
]

[tool.uv.build-backend]
module-name = "gherkin"
module-root = ""

[tool.mypy]
disallow_untyped_defs = true
packages = ["gherkin"]

[tool.ruff.lint]
extend-select = [
  "B",
  "UP",
]
