[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[project]
name = "gherkin-official"
version = "34.0.0"
description = "Gherkin parser (official, by Cucumber team)"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Cucumber Ltd and Björn Rasmusson", email = "cukes@googlegroups.com" }
]
dependencies = [
  "typing_extensions>=4",
]
keywords = ["gherkin", "cucumber", "bdd"]
license = "MIT"
license-files = [
  "LICENSE",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/cucumber/gherkin"
Repository = "https://github.com/cucumber/gherkin.git"
Download = "https://pypi.python.org/pypi/gherkin-official"
Issues = "https://github.com/cucumber/gherkin/issues"
Changelog = "https://github.com/cucumber/gherkin/releases"

[dependency-groups]
dev = [
    "coverage>=7.2",
    "pre-commit==4.3.0",
    "pytest>=5.0",
]

[tool.uv]
trusted-publishing = "always"

[tool.uv.build-backend]
module-name = "gherkin"
module-root = ""

[tool.mypy]
disallow_untyped_defs = true
packages = ["gherkin"]

[tool.ruff.lint]
extend-select = [
  "B",
  "UP",
]

[tool.coverage.run]
source = ["gherkin"]
branch = true
parallel = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
  # Don't complain about missing debug-only code:
  "def __repr__",
  "if self\\.debug",

  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",

  # Don't complain if non-runnable code isn't run:
  "if 0:",
  "if __name__ == .__main__.:",

  # Don't complain about abstract methods, they aren't run:
  "@(abc\\.)?abstractmethod",
]
ignore_errors = true

[tool.coverage.html]
directory = "build/coverage.html"

[tool.coverage.xml]
output = "build/coverage.xml"
