[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[project]
name = "gherkin-official"
version = "30.1.0"
description = "Gherkin parser (official, by Cucumber team)"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Cucumber Ltd and Björn Rasmusson", email = "cukes@googlegroups.com" }
]
dependencies = [
  "typing_extensions>=4",
]
keywords = ["gherkin", "cucumber", "bdd"]
license = "MIT"
license-files = [
  "LICENSE",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/cucumber/gherkin"
Repository = "https://github.com/cucumber/gherkin.git"
Download = "https://pypi.python.org/pypi/gherkin-official"
Issues = "https://github.com/cucumber/gherkin/issues"
Changelog = "https://github.com/cucumber/gherkin/releases"

[dependency-groups]
dev = [
    "coverage>=7.2",
    "pre-commit==4.3.0",
    "pytest>=6.1",
]

[tool.uv]
trusted-publishing = "always"

[tool.uv.build-backend]
module-name = "gherkin"

[tool.tox]
requires = ["tox>=4.22"]
env_list = ["3.13", "3.12", "3.11", "3.10", "3.9"]

[tool.tox.env_run_base]
dependency_groups = [
  "dev",
]
commands = [["pytest", "{posargs}"]]

[tool.tox.env.lint]
description = "Run linting and formatting checks (and auto-fixes)"
deps = ["pre-commit-uv>=4.1.1"]
commands = [["pre-commit", "run", "--all-files", "--show-diff-on-failure"]]

[tool.tox.env.coverage]
commands = [
  ["coverage", "run", "-m", "pytest", "{posargs}"],
  ["coverage", "combine"],
  ["coverage", "report"],
  ["coverage", "html"],
]

[tool.mypy]
disallow_untyped_defs = true
mypy_path = ["src"]
packages = ["gherkin"]

[tool.ruff.lint]
extend-select = [
  "B",
  "C4",
  "COM",
  "FURB",
  "I",
  "ISC",
  "N",
  "PERF",
  "PIE",
  "RET",
  "TID",
  "UP",
]

[tool.ruff.lint.extend-per-file-ignores]
# Renaming exception suffixes to 'Error' impacts client code. Should fix in wider change.
"src/gherkin/errors.py" = ["N818"]
# Renaming matching functions to be PEP8 compliant could impact client code. Should fix in wider change.
"src/gherkin/token_matcher*.py" = ["N"]
# Nested `if` statements a result of parser generation method
"src/gherkin/parser.py" = ["N", "SIM102"]
# Require a refactor to use context managers
"src/gherkin/token_scanner.py" = ["SIM115"]
"src/gherkin/stream/source_events.py" = ["SIM115"]

[tool.coverage.run]
source = ["gherkin"]
branch = true
parallel = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
  # Don't complain about missing debug-only code:
  "def __repr__",
  "if self\\.debug",

  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",

  # Don't complain if non-runnable code isn't run:
  "if 0:",
  "if __name__ == .__main__.:",

  # Don't complain about abstract methods, they aren't run:
  "@(abc\\.)?abstractmethod",
]
ignore_errors = true

[tool.coverage.html]
directory = "build/coverage.html"

[tool.coverage.xml]
output = "build/coverage.xml"
